# pirated-data

./: README.md  caste  final.json  function_list_Lang.xlsx  name6.json
Java/: .gitignore  .project  pom.xml
Java/src/main/java/com/source/: DataProvider.java  FunctionProvider.java  PiratedData.java
Java/src/main/java/io/github/studyandmasti/: DataProvider.java  PiratedData.java
Java/src/test/java/: TestFunctions.java
JavaScript/package/: LICENSE  dataProvider.js  index.js  package.json  readme.md
JavaScript/test-folder/: script.mjs
package/: .gitignore  dataProvider.js  index.js  package-lock.json  package.json  readme.md
python/: LICENSE  README.md  pyproject.toml
python/src/pirated_data/: __init__.py
python/src/pirated_data.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/src/tests/: test.py
python/tests/: test.py
test-folder/: .gitignore  script.js  script.mjs
