[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pirated_data"
version = "0.0.1"
authors = [
  { name="Satyajit Behera", email="satyajit319@gmail.com" },
]
description = "Generating sample user data like name, age, mobilenumber, aadharnumber etc for testing."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/studyandmasti/pirated-data.git"
"Bug Tracker" = "https://github.com/studyandmasti/pirated-data/issuess"